2-deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      # matchLabels должен совпадать с metadata.labels  
      app: converter
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 10%
  template:
    # шаблон типа Pod, который нужно развернуть
    metadata:
      # name нужен для обращения через kubectl
      name: conv-app
      labels:
        # labels нужен для связи с NodePort
        app: converter
    spec:
      containers:
        - name: conv-app
          image: antonlarichev/conv-app:1.2
          ports:
            # открытый наружу порт контейнера
            - containerPort: 80
          # ограничения Pod по ресурсам
          resources:
            limits:
              # количсетво мегабайт
              memory: "512Mi"
              # 1000m - 1 процессор
              cpu: "200m"
