2-deployment/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-clusterip
spec:
  type: ClusterIP
  selector:
    app: converter
  ports:
  - port: 80
    protocol: TCP
